syntax ="proto3";

package calculator;

option go_package = "github.com/MahbubAhmedTonmoy/GoGrpc/calculator/proto";

message MaxRequest {
    int32 number = 1;
}
message MaxResponse {
    int32 result = 1;
}

message AvgRequest {
    int64 number = 1;
}
message AvgResponse {
    double result = 1;
}

message PrimeRequest {
    int64 number = 1;
}
message PrimeResponse {
    int64 result = 1;
}

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}
message SumResponse {
    int32 result = 1;
}
message SqrtRequest {
    int32 number = 1;
}
message SqrtResponse {
    double result = 1;
}
service CalculatorService{
    rpc Sum (SumRequest) returns (SumResponse);
    rpc primes (PrimeRequest) returns (stream PrimeResponse);
    rpc avg (stream AvgRequest) returns (AvgResponse);
    rpc Max (stream MaxRequest) returns (stream MaxResponse);
    rpc Sqrt (SqrtRequest) returns (SqrtResponse);

}